<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    tools:context=".activities.DeliverNotOKActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/title_toolbar"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_arrow_icon"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_delivered"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/upper"
        android:layout_below="@+id/title_toolbar"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper"
        android:layout_marginTop="-150dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="16dp"
        android:background="@drawable/round_background_white_10dp"
        android:elevation="2dp"
        android:orientation="vertical">

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/about"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_address"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:text="@string/no_recipient"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_background_white_pale_10dp">

            <com.za.sbs.delivery.widgets.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/to_add_photo"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/photo_icon"
                />

        </RelativeLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_address"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_denied"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_sender"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_about"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:text="@string/send_info"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"/>

</RelativeLayout>