<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".noti.LocationPermissionActivity">

    <com.za.sbs.delivery.widgets.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_location_sharing_off"
        android:textColor="@color/colorTint"
        android:textSize="26dp"
        android:textStyle="bold" />

    <com.za.sbs.delivery.widgets.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/b1_location_sharing_off"
        android:textColor="@color/colorWhite"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="74dp"
        android:layout_marginTop="36dp"
        android:src="@mipmap/ic_location_sharing" />

    <com.za.sbs.delivery.widgets.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/b2_location_sharing_off"
        android:textColor="@color/colorWhite"
        android:textSize="17dp" />

    <com.za.sbs.delivery.widgets.MMButton
        android:id="@+id/btnPermissionOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_go_to_setting" />
</LinearLayout>