<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.za.sbs.delivery.widgets.MMEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fill_name"
        android:background="@drawable/round_bg_gray_light_10dp"
        android:hint="@string/name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"/>

    <com.za.sbs.delivery.widgets.MMEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_gray_light_10dp"
        android:hint="@string/phone_no"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <com.za.sbs.delivery.widgets.MMEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_gray_light_10dp"
        android:hint="@string/home_no"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <com.za.sbs.delivery.widgets.MMEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_gray_light_10dp"
        android:hint="@string/street_no"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>
    <com.za.sbs.delivery.widgets.MMEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg_gray_light_10dp"
        android:hint="@string/quarter_no"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:id="@+id/auto_township_layout"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_background_line_gray_light_10dp">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_text_township"
            android:background="@null"/>

    </LinearLayout>

    <com.za.sbs.delivery.widgets.MMTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Yangon, Yangon"
        android:textColor="@color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"/>

</LinearLayout>