<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".activities.DeliverProductsInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/title"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/back"
            android:src="@drawable/back_arrow_icon"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/deliver_products_info"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/title"
        android:id="@+id/upper"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper"
        android:layout_marginTop="-140dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/round_background_white_10dp">

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/colorAccent"
            android:padding="10dp"/>

        <com.za.sbs.delivery.widgets.MMEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/round_bg_gray_light_10dp"
            android:hint="Smart Phone"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_product_type"
            android:textColor="@color/colorAccent"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_background_line_gray_light_10dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"/>
        </LinearLayout>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_type"
            android:textColor="@color/colorAccent"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_background_line_gray_light_10dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"/>
        </LinearLayout>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/colorAccent"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:weightSum="3"
            android:gravity="center_vertical"
            android:background="@drawable/round_bg_gray_light_10dp">

            <com.za.sbs.delivery.widgets.MMEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:background="@null"
                android:hint="0.0"
                android:paddingLeft="16dp"
                />
            <com.za.sbs.delivery.widgets.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/kg"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:paddingRight="16dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <com.za.sbs.delivery.widgets.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cost"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <com.za.sbs.delivery.widgets.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:text="  -  1500 Kyats"/>

        </LinearLayout>

    </LinearLayout>

    <com.za.sbs.delivery.widgets.MMButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/received"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>