<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background">

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:text="@string/months"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/delivered"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/return_parcel"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="January"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="-"
            android:gravity="center"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="-"
            android:gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_pale"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="February"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="-"
            android:gravity="center"/>

        <com.za.sbs.delivery.widgets.MMTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="-"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>